applied dark bg color to body to ensure no white space on bottom of page

--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,9 @@ body {
 /*
   AQUARIUM
  */
+body {
+	background-color: #002727
+}
 #air {
 	height: 20%;
 }
